# esp_hacking

./: .gitignore  bitman_windows.code-workspace  esp_hacking.code-workspace  readme.md  scratch_pad.md
.github/: copilot-instructions.md
Blinky/: CMakeLists.txt  README.md
ConsumeLib/: README.md
WifiConnect/: CMakeLists.txt  README.md  main.c  sdkconfig.defaults
WifiConnect2/: CMakeLists.txt
basic_esp_fsm/: CMakeLists.txt  PROJECT_SUMMARY.md  README.md  STATE_DIAGRAM.txt  TECHNICAL_DESIGN.md  sdkconfig
ble_battery_client/: CMakeLists.txt  README.md  sdkconfig.defaults
ble_battery_server/: CMakeLists.txt  README.md
ble_bob/: CMakeLists.txt  sdkconfig
ble_cccd_server/: CMakeLists.txt  README.md  sdkconfig.defaults
ble_client/: CMakeLists.txt
ble_connect/: CMakeLists.txt
ble_restart_server/: CMakeLists.txt
ble_server/: CMakeLists.txt  README.md
ble_server2/: CMakeLists.txt  README.md
blink/: CMakeLists.txt
components/bat_lib/: CMakeLists.txt  bat_ble.c  bat_ble_client.c  bat_ble_client_logging.c  bat_ble_server.c  bat_blink.c  bat_hash_table.c  bat_lib.c  bat_wifi_connect.c  bat_wifi_logging.c  idf_component.yml
components/bat_lib/include/: bat_ble.h  bat_ble_client.h  bat_ble_client_logging.h  bat_ble_server.h  bat_blink.h  bat_hash_table.h  bat_lib.h  bat_wifi_connect.h  bat_wifi_logging.h
deep_sleep/: CMakeLists.txt  README.md
docs/: bitmans_bles_fsm.md  bitmans_bles_fsm_implementation.md  ble_client_on_esp.md  ble_intro.md  ble_server_on_esp.md  (+3 more)
qt_ble_gatt_server/: CMakeLists.txt  gatt_server.cpp  gatt_server.h  main.cpp
(+93 files in other folders)
